i made a first entity with his controller, also i added a connection string and db context for the database

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connection": "Server=bkrxgzdhb1buhusvoxgl-mysql.services.clever-cloud.com;Port=3306;Database=bkrxgzdhb1buhusvoxgl;User=ulfwx2hzenv49py6;Password=ulfwx2hzenv49py6;"
+  }
 }
